@@ -6,9 +6,10 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 	   Zoltan Szalontai.
 	2. Disabled Shift+Enter shortcut by default, since it may confuse new
 	   users.
+	3. Make Alt+Enter behave like Xterm.
 
     * Enhancements:
-	3. Added --titleFormat and --winTitleFormat options to control display
+	1. Added --titleFormat and --winTitleFormat options to control display
 	   of tab and window titles.
 
 Jimmy Zhou <jimmyzhou@users.sourceforge.net>
